# Multi-Tenant-To-Do-App

./: pyproject.toml
multi_tenant_to_do_app/: auth.py  db.py  main.py  models.py
multi_tenant_to_do_app/router/: user.py
tests/: test_main.py
